--- a/.env
+++ b/.env
@@ -1,4 +1,16 @@
-SCRAPMASTER_DB=/chemin/vers/database/scrapmaster.db
-SCRAPMASTER_SCRAPERS=/chemin/vers/scrapers
+# Base de données & scrapers
+SCRAPMASTER_DB=./database/scrapmaster.db
+SCRAPMASTER_SCRAPERS=./scrapers
+
+# Flask
 FLASK_ENV=development
-FLASK_DEBUG=True
+FLASK_DEBUG=1
+
+# Options de scraping
+SCRAPMASTER_DELAY_MS=1200
+SCRAPMASTER_MAX_PAGES=6
+SCRAPMASTER_UA_ROTATION=True
+SCRAPMASTER_PROXY=
+
+# API
+BING_API_KEY=TA_CLE_ICI
